--- a/.config/gtk-3.0/gtk.css
+++ b/.config/gtk-3.0/gtk.css
@@ -6,8 +6,8 @@
  */
 vte-terminal,
 terminal-window {
-    padding: 5px 5px 3px 5px;
-    -vte-terminal-inner-border: 5px 5px 3px 5px;
+    padding: 10px;
+    -vte-terminal-inner-border: 10px;
 }
 
 .termite {
