--- a/.config/gtk-3.0/gtk.css
+++ b/.config/gtk-3.0/gtk.css
@@ -6,8 +6,8 @@
  */
 vte-terminal,
 terminal-window {
-    padding: 10px;
-    -vte-terminal-inner-border: 10px;
+    padding: 10px 10px 5px 10px;
+    -vte-terminal-inner-border: 10px 10px 5px 10px;
 }
 
 .termite {
